Add rep for images

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <a style="font-size: 90%;" href="https://t.me/limekhin">Telegram</a>
         <h2 style="font-size: 100%;">FOTO:</h2>
             <img
-                src="spb1.jpg"
+                src="src/image/spb1.jpg"
                 alt="Это я"
                 width="400"
                 height="250"
             />
             <img 
-                src="spb2.jpg"
+                src="src/image/spb2.jpg"
                 alt="Это тоже я"
                 width="250"
                 height="250"
