add style.css (2 lab)

--- a/index.html
+++ b/index.html
@@ -3,48 +3,45 @@
 <html>
     <head>
         <title>Лабораторная работа 1</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body style="background-color: blanchedalmond;">
-        <h1 style = "text-align: center;">Это моя первая HTML страница</h1>
-        <h1 style="font-size: 120%;">O ce6e:</h1>
-            <p style="font-size: 90%;"><b>Родился:</b> город <i>Самара</i></p>
-            <p style="font-size: 90%;"><b>Учился:</b> <i>Самарский</i> спортивный лицей</p>
-            <p style="font-size: 90%;"><del><b>Хобби:</b></del> прогулки</p>
-        <h2 style="font-size: 100%;">Какие фильмы мне нравятся: </h2>
-            <ul style="font-size: 90%;">
-                <li>Джентельмены</li>
-                <li>Интерстеллар</li>
-                <li>Недруги</li>
-                <li>Легенда(2017)</li>
-                <li>Далласский клуб покупателей</li>
-            </ul>
-        <h2 style="font-size: 100%;">Какая музыка мне нравится: </h2>
-            <ol style="font-size: 90%;">
-                <li>The Rolling Stones</li>
-                <li>The Beatles</li>
-                <li>Aerosmith</li>
-                <li>Led Zeppelin</li>
-                <li>Disturbed</li>
-                <li>Pink Floyd</li>
-                <li>Slayer</li>
-                <li>Deftones</li>
-                <li>LANDMVRKS</li>
-                <li>Make Them Suffer</li>
-            </ol>
-        <h2 style="font-size: 100%;">Как связаться со мной:</h2>
-            <a style="font-size: 90%;" href="https://t.me/limekhin">Telegram</a>
-        <h2 style="font-size: 100%;">FOTO:</h2>
-            <img
-                src="src/image/spb1.jpg"
-                alt="Это я"
-                width="400"
-                height="250"
-            />
-            <img 
-                src="src/image/spb2.jpg"
-                alt="Это тоже я"
-                width="250"
-                height="250"
-            />
+    <body>
+        <div class="content">
+            <div class="content-left">
+                <h1>Это моя первая HTML страница</h1>
+                <h2>O ce6e:</h2>
+                    <p><b>Родился:</b> город <i>Самара</i></p>
+                    <p><b>Учился:</b> <i>Самарский</i> спортивный лицей</p>
+                    <p><del><b>Хобби:</b></del> прогулки</p>
+                <h2>Какие фильмы мне нравятся: </h2>
+                    <ul>
+                        <li>Джентельмены</li>
+                        <li>Интерстеллар</li>
+                        <li>Недруги</li>
+                        <li>Легенда(2017)</li>
+                        <li>Далласский клуб покупателей</li>
+                    </ul>
+                <h2>Какая музыка мне нравится: </h2>
+                    <ol>
+                        <li>The Rolling Stones</li>
+                        <li>The Beatles</li>
+                        <li>Aerosmith</li>
+                        <li>Led Zeppelin</li>
+                        <li>Disturbed</li>
+                        <li>Pink Floyd</li>
+                        <li>Slayer</li>
+                        <li>Deftones</li>
+                        <li>LANDMVRKS</li>
+                        <li>Make Them Suffer</li>
+                    </ol>
+                <h2>Как связаться со мной:</h2>
+                    <a href="https://t.me/limekhin">Telegram</a>
+            </div>
+            <div class="content-right">
+                <h2>FOTO</h2>
+                    <img src="src/image/spb1.jpg"/>
+                    <img src="src/image/spb2.jpg"/>
+            </div>
+        </div>  
     </body>
 </html>
