--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="ru">
 <html>
     <head>
-        <title>Лабораторная работа 1</title>
+        <title>Лабораторная работа</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="header">
+            <a href="index.html">Основная страница</a>
+            <a href="page2.html">Позициирование элементов</a>
+        </div>
         <div class="content">
             <div class="content-left">
                 <h1>Это моя первая HTML страница</h1>
