--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="header">
             <a href="index.html">Основная страница</a>
             <a href="page2.html">Позициирование элементов</a>
+            <a href="table.html">Таблица</a>
         </div>
         <div class="content">
             <div class="content-left">
