--- a/page2.html
+++ b/page2.html
@@ -10,6 +10,7 @@
         <div class="header">
             <a href="index.html">Основная страница</a>
             <a href="page2.html">Позициирование элементов</a>
+            <a href="table.html">Таблица</a>
         </div>
         <h1>Горизонтальное позиционирование</h1>
         <div class="container">
