Edit: allocated the style for the table in table.css

--- a/table.html
+++ b/table.html
@@ -4,6 +4,7 @@
     <head>
         <title>Лабораторная работа</title>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="table.css">
     </head>
 
     <body>
